--- a/NEWHIRES/appsettings.json
+++ b/NEWHIRES/appsettings.json
@@ -4,5 +4,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "NHDB": "Data Source=.\\SQLEXPRESS;Initial Catalog=NHDB;Persist Security Info=True;User ID=sa;Password=Systems2019!"
+  }
+
+
 }
