--- a/NEWHIRES/appsettings.json
+++ b/NEWHIRES/appsettings.json
@@ -6,7 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "NHDB": "Data Source=.\\SQLEXPRESS;Initial Catalog=NHDB;Persist Security Info=True;User ID=sa;Password=Systems2019!"
+    "NHDB": "Data Source=.\\SQLEXPRESS;Initial Catalog=NHDB;Integrated Security=True;"
   }
 
 
